JSW Devsb/src/objects/Influencer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_new__c</fullName>
        <formula>&apos;dummy&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Brands__c</fullName>
        <label>Competitor Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_1__c</fullName>
        <label>Contact Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Contact Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_3__c</fullName>
        <label>Contact Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_1__c</fullName>
        <label>Contact Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_2__c</fullName>
        <label>Contact Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_3__c</fullName>
        <label>Contact Person 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_1__c</fullName>
        <label>Contact Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_2__c</fullName>
        <label>Contact Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_3__c</fullName>
        <label>Contact Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Role_1__c</fullName>
        <label>Contact Role 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_2__c</fullName>
        <label>Contact Role 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_3__c</fullName>
        <label>Contact Role 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District1__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inclination_to_JSW__c</fullName>
        <label>Inclination to JSW</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Inclined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Inclined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Inclined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Market_Rating__c</fullName>
        <label>Maerket Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_concerned_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of concerned SO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influencers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_sites_under_influencer__c</fullName>
        <label>No. of sites under influencer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Category_del__c</fullName>
        <label>Overall Category</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registered_with_JSW_ELP_program__c</fullName>
        <label>Registered with JSW ELP program?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Name</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Engineers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder office</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume_potential_in_MT__c</fullName>
        <label>Volume potential in MT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Influencer</label>
    <nameField>
        <label>Influencer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Influencers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Inclination_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(OR( ISPICKVAL( Type__c , &apos;Engineers&apos;) ,ISPICKVAL( Type__c , &apos;Architects&apos;),ISPICKVAL( Type__c , &apos;Structural Consultants&apos;)), ISPICKVAL( Inclination_to_JSW__c , &apos;&apos;)), true, false)</errorConditionFormula>
        <errorDisplayField>Inclination_to_JSW__c</errorDisplayField>
        <errorMessage>Please enter value for inclination</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sites_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>IF(  AND(OR( ISPICKVAL( Type__c , &apos;Engineers&apos;) ,ISPICKVAL( Type__c , &apos;Architects&apos;),ISPICKVAL( Type__c , &apos;Structural Consultants&apos;)), OR( ISNULL( No_of_sites_under_influencer__c ) , ISBLANK( No_of_sites_under_influencer__c ) ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>No_of_sites_under_influencer__c</errorDisplayField>
        <errorMessage>Please enter this value</errorMessage>
    </validationRules>
</CustomObject>